created simple design, added tasks components with simple hierarchy and logic, switching between task state.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="ToDoDaily app to clean up yours daily mess."
+      content="ToDoDaily an app made for cleaning your daily mess."
     />
     <title>React App</title>
   </head>
