--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
       content="ToDoDaily an app made for cleaning your daily mess."
     />
     <title>React App</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
