whole group button is clickable not only text, fixed basename in routing

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,11 @@
       name="description"
       content="ToDoDaily an app made for cleaning your daily mess."
     />
-    <title>React App</title>
+    <title>ToDoDaily - clean up your daily mess.</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
